<resources>
    <string name="app_name">Helpstone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Helpstone</string>
    <string name="nav_header_subtitle">By Freebryze and FoudreNoire26i</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_home">Page d\'acceuil</string>
    <string name="menu_booster">Paquets de cartes</string>
    <string name="CardListTitle">Liste des cartes</string>
    <string name="card_detail_text">Mon Detail</string>
    <string name="myCreators">Developed by FoudreNoire26i and Freebryze</string>
    <string name="ClassListTitle">Classes</string>
    <string name="HomeText">Bonjour, et bienvenue sur notre application Helpstone \n \n
    Sur cette application vous retrouverez 3 écrans depuis le menu : \n \n
        La liste de carte\n
        L\'ouverture de booster\n
        La liste des classes\n\n
        Bonne découverte !
    </string>
</resources>