<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hearthstonetrueapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hearthstonetrueapp.ui.gallery.MyCardsFragment"
        android:label="@string/menu_booster"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_cardList"
        android:name="com.example.hearthstonetrueapp.ui.Card.CardListFragment"
        android:label="@string/CardListTitle"
        tools:layout="@layout/fragment_card_list" >
        <action
            android:id="@+id/action_nav_cardList_to_nav_cardDetail"
            app:destination="@id/nav_cardDetail" />
    </fragment>

    <fragment
        android:id="@+id/nav_cardDetail"
        android:name="com.example.hearthstonetrueapp.ui.Card.CardDetailFragment"
        android:label="@string/card_detail_text"
        tools:layout="@layout/fragment_card_detail" />

    <fragment
        android:id="@+id/nav_classList"
        android:name="com.example.hearthstonetrueapp.ui.Classe.ClassListFragment"
        android:label="@string/ClassListTitle"
        tools:layout="@layout/fragment_class_list" />

</navigation>